# client_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.envs  README.md  WasiToolchain.cmake  requirements.txt  setup.py
func/: CMakeLists.txt
func/demo/: CMakeLists.txt  hello.cpp  hello_world.cpp
func/py_func/: echo.py  hello.py  noop.py
func/python/: CMakeLists.txt  py_func.cpp  pyinit.c
librfit/: CMakeLists.txt  core.cpp  emscripten.c  ping.cpp  rfit.imports  zygote.cpp
librfit/include/: core.h  emscripten.h  host_interface.h  rfit.h
pyrfit/: setup.py
pyrfit/pyrfit/: __init__.py  core.py
rfittools/: __init__.py  build.py  compile_util.py  env.py
tasks/: __init__.py  cpython.py  func.py  install.py  lib.py  lib_rfit_python.py  libffi.py  librfit.py  runtime.py  t.py
